# ansie

./: LICENSE.txt  pyproject.toml
docs/: DOCS.md  README.md
examples/256_colors/: main.py
examples/basic_colors/: main.py
src/ansie/: misc.py  screen.py  styles.py
