[tool.poetry]
name = "ansie"
version = "0.0.1"
description = "Utility for convenient use of ANSI ESC codes."
authors = ["Rebzzel"]
license = "MIT"
packages = [
    {include = "ansie", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
